compiler/src/test/resources/golden/errors/syn_top_level_junk.dawn
fn f(x: Int) -> Int = x

42 + 1
