compiler/src/test/resources/golden/errors/syn_top_level_junk.err
error: only declarations (fn, type, const, trait, impl, test) are allowed at module top level
  --> syn_top_level_junk.dawn:3:1
  |
3 | 42 + 1
  | ^^
